cmake_minimum_required(VERSION 3.14)
project(abc)

set(CMAKE_CXX_STANDARD 14)

include_directories(./includes)

add_executable(042_a 042/a.cpp)
add_executable(042_b 042/b.cpp)
add_executable(042_c 042/c.cpp)

add_executable(049_c 049/c.cpp)

add_executable(081_a 081/a.cpp)
add_executable(081_b 081/b.cpp)

add_executable(083_b 083/b.cpp)

add_executable(085_b 085/b.cpp)
add_executable(085_c 085/c.cpp)

add_executable(086_a 086/a.cpp)

add_executable(087_b 087/b.cpp)

add_executable(088_b 088/b.cpp)
add_executable(088_c 088/c.cpp)

add_executable(089_c 089/c.cpp)

add_executable(157_b 157/b.cpp)

