cmake_minimum_required(VERSION 3.14)
project(abc)

set(CMAKE_CXX_STANDARD 14)

include_directories(./includes)

add_executable(007_a 007/a.cpp)
add_executable(007_b 007/b.cpp)
add_executable(007_c 007/c.cpp)
add_executable(007_d 007/d.cpp)

add_executable(042_a 042/a.cpp)
add_executable(042_b 042/b.cpp)
add_executable(042_c 042/c.cpp)

add_executable(046_a 046/a.cpp)
add_executable(046_b 046/b.cpp)
add_executable(046_c 046/c.cpp)
add_executable(046_d 046/d.cpp)
add_executable(046_e 046/e.cpp)
add_executable(046_f 046/f.cpp)

add_executable(049_c 049/c.cpp)

add_executable(081_a 081/a.cpp)
add_executable(081_b 081/b.cpp)

add_executable(083_b 083/b.cpp)

add_executable(085_b 085/b.cpp)
add_executable(085_c 085/c.cpp)

add_executable(086_a 086/a.cpp)

add_executable(087_b 087/b.cpp)

add_executable(088_b 088/b.cpp)
add_executable(088_c 088/c.cpp)

add_executable(089_c 089/c.cpp)

add_executable(157_b 157/b.cpp)

add_executable(165_a 165/a.cpp)
add_executable(165_b 165/b.cpp)
add_executable(165_c 165/c.cpp)
add_executable(165_d 165/d.cpp)
add_executable(165_e 165/e.cpp)
add_executable(165_f 165/f.cpp)

add_executable(196_a 196/a.cpp)
add_executable(196_b 196/b.cpp)
add_executable(196_c 196/c.cpp)
add_executable(196_d 196/d.cpp)

add_executable(197_a 197/a.cpp)
add_executable(197_b 197/b.cpp)
add_executable(197_c 197/c.cpp)
add_executable(197_d 197/d.cpp)
