cmake_minimum_required(VERSION 3.14)
project(cpp)

set(CMAKE_CXX_STANDARD 14)

include_directories(./includes)

add_executable(b b.cpp)
add_executable(c c.cpp)
add_executable(d d.cpp)
add_executable(e e.cpp)
add_executable(f f.cpp)
add_executable(g g.cpp)
add_executable(h h.cpp)
add_executable(i i.cpp)
add_executable(j j.cpp)
add_executable(k k.cpp)
add_executable(l l.cpp)
add_executable(m m.cpp)
add_executable(n n.cpp)
add_executable(o o.cpp)
add_executable(p p.cpp)
add_executable(r r.cpp)
add_executable(s s.cpp)
add_executable(t t.cpp)
add_executable(u u.cpp)
add_executable(v_sample v_sample.cpp)
add_executable(v v.cpp)
add_executable(w w.cpp)
add_executable(z z.cpp)
add_executable(aa aa.cpp)
add_executable(ab ab.cpp)
